# world-cup

./: .gitignore  README.md  api_client.py  auth.py  config.py  database.py  dev-plan.txt  main.py  models.py  pyproject.toml  scoring_engine.py  teams.csv
.github/workflows/: sync.yml
app/: competition.py  draw.py  main.py  player.py  pool.py  presentation.py  team.py
dev/: draw.py  main.py  sample_randomness.py  teams.py
routers/: admin.py  bracket.py  dashboard.py  matches.py  pool_auth.py  reveal.py  standings.py  teams.py  worker.py
scripts/: init_db.sql  reset_db.py  seed.py  seed_groups.py  seed_matches.py  seed_settings.py  seed_teams.py  seed_users.py
scripts/data/: games.json  groups.json  teams.json
static/css/: app.css
tasks/: db_init.py
templates/: admin_login.html  admin_panel.html  assignments.html  base.html  bracket.html  dashboard.html  matches.html  password_gate.html  reveal.html  standings.html  teams.html
templates/fragments/: draw_result.html  match_card.html  pick_card.html  team_row.html  teams_matrix.html  user_breakdown.html
tests/: conftest.py  seed_test_state.py  simulate_tournament.py  test_group_scoring.py  test_knockout_scoring.py  test_simulation.py
