[project]
name = "world-cup"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.29",
    "supabase>=2.9.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
